# shennong-db

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CODEGRAPH.md  CODEX_PRODUCTION_HARDENING_PROMPT.md  COMMIT.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  SHENNONGDB_WEBUI_BUILD_PROMPT.md  deny.toml  design-qa.md  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  shennong-data-server-general-api-SPEC-v2.md  shennong-db-architecture-spec.md
.agents/skills/shennong-db/: SKILL.md
.dockerhub/: README.md
.github/workflows/: ci.yml  docker-main-publish.yml  docker-publish.yml  dockerhub-description.yml
agent-runtime/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
agent-runtime/src/: fetch-guard.test.ts  fetch-guard.ts  server.test.ts  server.ts
clients/r/ShennongData/: DESCRIPTION  LICENSE  NAMESPACE  README.md
crates/shennong-auth/: Cargo.toml
crates/shennong-auth/src/: lib.rs
crates/shennong-cli/: Cargo.toml
crates/shennong-cli/src/: main.rs
crates/shennong-core/: Cargo.toml
crates/shennong-core/migrations/: 0001_resource_engine.sql  0002_resource_grants.sql  0003_audit_events.sql  0004_resource_search.sql  0005_users.sql  0006_permissions_fail_closed.sql  0007_ingestion_jobs.sql  0008_artifact_lifecycle.sql  0009_web_auth.sql  0010_token_lifecycle.sql  0011_web_product.sql  0012_research_graph.sql  0013_agent_chat.sql  0014_agent_chat_runtime.sql  0015_agent_context.sql  0016_os_project_boundary.sql  0017_os_upload_boundary.sql  0018_v1_provenance_integrity.sql
crates/shennong-core/src/: agent.rs  agent_context.rs  lib.rs  research_graph.rs  web.rs
crates/shennong-mcp/: Cargo.toml
crates/shennong-mcp/src/: main.rs
crates/shennong-query/: Cargo.toml
crates/shennong-query/src/: lib.rs
crates/shennong-schema/: Cargo.toml
crates/shennong-schema/src/: lib.rs
crates/shennong-server/: Cargo.toml
crates/shennong-server/src/: agent_chat.rs  agent_context_api.rs  main.rs  pi_runtime.rs  research_graph_api.rs
crates/shennong-storage/: Cargo.toml
crates/shennong-storage/src/: lib.rs  s3.rs
deploy/systemd/: ollama-docker-proxy.service  ollama-docker-proxy.socket
docker/: Caddyfile  clickhouse-config.xml  entrypoint.sh  tiledb_backend.py
docker/clickhouse/: 001_expression_cache.sql
docs/: IMPLEMENTATION_ROADMAP.md  README.md  SHENNONG_PLATFORM_BLUEPRINT.md  WEB_UI_PRODUCT_SPEC.md  agent-integrations.md  architecture.md  backup-recovery.md  benchmark-results.md  clickhouse-cache.md  gene-identifiers.md  guide.md  performance.md  product-core.md  production-compose.md  production-hardening.md  research-biograph.md  s3-storage.md  storage-lifecycle.md  web-api-boundaries.md  web-api-gaps.md
docs/adr/: 0002-tiledb-backend.md
docs/archive/: CODEX_PRODUCTION_HARDENING_PROMPT.md  SHENNONGDB_WEBUI_BUILD_PROMPT.md  development-milestones.md
docs/benchmarks/: 2026-07-14-cgroup.json  2026-07-14-http.json  2026-07-14-webui.json
docs/reference/: architecture-spec.md
docs/screenshots/webui/: README.md
openapi/: shennongdb.json
providers/: README.md  toil.yaml
scripts/: backup-production.sh  benchmark.sh  benchmark_http.py  migrate-embedded-to-production.sh  prepare_toil_example.py  restore-drill.sh  restore-production.sh  test-headless-platform.sh  test-platform.sh  verify-production.sh
seed/: toil-pbmc.json
shennong_db/: __init__.py  cache.py  catalog.py  config.py  errors.py  formats.py  jobs.py  main.py  pagination.py  security.py
shennong_db/access/: __init__.py  repository.py  service.py
shennong_db/api/: deps.py  query_execution.py
shennong_db/api/routes/: admin.py  agent.py  auth.py  catalog.py  datasets.py  ingest.py  queries.py  semantic.py  tools.py
shennong_db/backends/: __init__.py  base.py  clickhouse.py  memory.py  router.py  soma.py  tenx_h5.py  xena.py
shennong_db/db/: __init__.py  metadata.py
shennong_db/ingest/: __init__.py  cli.py  loaders.py  manifest.py
shennong_db/registry/: __init__.py  repository.py  service.py
shennong_db/schemas/: __init__.py  access.py  common.py  datasets.py  ingest.py  queries.py  semantic.py  tools.py
sql/: clickhouse.sql  postgres.sql
tests/: test_api.py
tests/fixtures/: expression.tsv  gene-map.tsv  import-failure.json  import-missing-local.json  import-success.json  tiledb-test.py
tests/providers/: bad-materialization.yaml  bad-second.yaml  missing-checksum.yaml
web/: Dockerfile  README.md  eslint.config.mjs  index.html  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web-archive/: README.md
web-archive/v0.6.0/: README.md  package.json
web-archive/v0.6.0/app/: page.tsx
web-archive/v0.6.0/components/: account-view.tsx  auth-support-view.tsx  auth-view.tsx  data-ops-view.tsx  (+6 more)
web/app/: globals.css  layout.tsx  page.tsx
web/components/: account-view.tsx  admin-section-view.tsx  admin-view.tsx  api-access-view.test.tsx  api-access-view.tsx  app-shell.tsx  auth-support-view.tsx  auth-view.tsx  catalog-section-view.tsx  catalog-view.tsx  console-view.tsx  data-ops-view.tsx  mock-provider.tsx  project-workspace-view.tsx  resource-drawer.test.tsx  resource-drawer.tsx  resource-page-view.tsx  upload-view.test.tsx  upload-view.tsx  user-detail-view.tsx
web/lib/: mock-data.ts  msw-ready.ts
web/mocks/: handlers.ts  integration.test.ts
web/playwright/: core-flows.spec.ts  visual.spec.ts
web/scripts/: benchmark-web.mjs
web/src/: App.tsx  index.css
web/tests/: setup.ts
webui/: README.md  middleware.ts  package.json  pnpm-lock.yaml
webui/app/: globals.css  layout.tsx
webui/components/: app-shell.tsx  auth-support-view.tsx  auth-view.tsx  catalog-view.tsx  chat-view.tsx  project-graph-view.tsx  project-observation-table.tsx  project-tabs.tsx  project-workspace-view.test.tsx  project-workspace-view.tsx  settings-dialog.tsx  upload-view.test.tsx
webui/lib/: settings-route.test.ts  settings-route.ts
webui/playwright/: core-flows.spec.ts  projects.spec.ts  visual.spec.ts
(+73 files in other folders)
