[workspace]
members = [
  "crates/shennong-schema",
  "crates/shennong-core",
  "crates/shennong-storage",
  "crates/shennong-query",
  "crates/shennong-auth",
  "crates/shennong-server",
  "crates/shennong-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1.89"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
http = "1.3.1"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["chrono", "migrate", "postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
