[workspace]
members = [
  "crates/shennong-schema",
  "crates/shennong-core",
  "crates/shennong-storage",
  "crates/shennong-query",
  "crates/shennong-auth",
  "crates/shennong-server",
  "crates/shennong-cli",
  "crates/shennong-mcp",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1.89"
aes-gcm = "0.10.3"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
libc = "0.2.186"
clap = { version = "4.5.41", features = ["derive", "env"] }
futures-util = { version = "0.3.31", default-features = false }
hmac = "0.12.1"
http = "1.3.1"
jsonwebtoken = { version = "9.3.1", default-features = false }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls", "stream"] }
rmcp = { version = "1.4.0", features = ["server", "transport-io"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sha1 = "0.10.6"
sqlx = { version = "0.8.6", features = ["chrono", "migrate", "postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tower-http = { version = "0.6.6", features = ["cors", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
url = "2.5.4"
