[project]
name = "shennong-data-server"
version = "0.1.0"
description = "Versioned storage and read API for bioinformatics datasets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "clickhouse-connect[async]>=0.7.18",
    "redis>=5.0.0",
    "typer>=0.12.0",
    "orjson>=3.10.0",
    "h5py>=3.11.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
tiledb = ["tiledbsoma>=1.15.0"]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
shennong-ingest = "shennong_db.ingest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shennong_db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]
