[package]
name = "shennong-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
http.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
sha1.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
