[package]
name = "shennong-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
shennong-auth = { path = "../shennong-auth" }
shennong-core = { path = "../shennong-core" }
shennong-schema = { path = "../shennong-schema" }
